@@ -64,7 +64,6 @@
             "IO::Compress::Gzip" : "0",
             "IO::HTML" : "0",
             "IO::Uncompress::Bunzip2" : "2.021",
-            "IO::Uncompress::Gunzip" : "0",
             "IO::Uncompress::Inflate" : "0",
             "IO::Uncompress::RawInflate" : "0",
             "LWP::MediaTypes" : "6",
